--- a/index.html
+++ b/index.html
@@ -8,18 +8,26 @@
 </head>
 <body>
     <div class="containner">
+        <div class="box-right">
             <h1> WELCOME</h1>
-       USER name
-        <input type="text">
-        PASSWORD
-        <input type="password" 
-        <button> LOGIN</button>
+
+            <form>
+                <label for="fname">user name</label><br>
+                <input type="text"> <br>
+                <label for="lname">PASSWORD</label><br>
+                <input type="password"><br><br>
+                <button> LOGIN</button>
+              </form> 
+              
+
+ 
         <P>Don't have an account? </P>
-        </div>
+    </div>
+    
         <div class="box-left">
             <img src="./image/imag.png" alt="imag">
         </div>
     </div>
-   
+</div> 
 </body>
 </html>
